force-app/main/default/objects/Employee_Board_Membership__c/Employee_Board_Membership__c.object-meta.xml
<CustomObject>
    <description>Tracks FNBO employee involvement with Non Profit organization boards of directors</description>
    <label>Employee Board Membership</label>
    <nameField>
        <displayFormat>EMB-{00000}</displayFormat>
        <label>Employee Board Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Board Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>