force-app/main/default/objects/Employee_Board_Membership__c/fields/Accounting_Bookkeeping__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Bookkeeping__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activity should align with FNBO job duties or area of expertise.  Example: Finance Analyst helps compile annual budget.</inlineHelpText>
    <label>Contributed Accounting or Bookkeeping</label>
    <type>Checkbox</type>
</CustomField>