force-app/main/default/objects/Employee_Board_Membership__c/fields/Board_Appointment_End_Date_employee__c.field-meta.xml
<CustomField>
    <fullName>Board_Appointment_End_Date_employee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the end date of the board member if known</inlineHelpText>
    <label>Board Appointment End Date</label>
    <type>Date</type>
</CustomField>