force-app/main/default/objects/Employee_Board_Membership__c/fields/Board_Appointment_Start_Date_employee__c.field-meta.xml
<CustomField>
    <fullName>Board_Appointment_Start_Date_employee__c</fullName>
    <defaultValue>Today()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the earliest known start date of the board appointment</inlineHelpText>
    <label>Board Appointment Start Date</label>
    <type>Date</type>
</CustomField>