force-app/main/default/objects/Employee_Board_Membership__c/fields/CRA_Assessement_Area__c.field-meta.xml
<CustomField>
    <fullName>CRA_Assessement_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Assessement Area</label>
    <type>TextArea</type>
</CustomField>