force-app/main/default/objects/Employee_Board_Membership__c/fields/Employee_Market__c.field-meta.xml
<CustomField>
    <fullName>Employee_Market__c</fullName>
    <label>Employee Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Des Moines</fullName>
            </value>
            <value>
                <fullName>Great Plains</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
            <value>
                <fullName>Omaha</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>