force-app/main/default/objects/Employee_Board_Membership__c/fields/Employee_Name_Intranet__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name_Intranet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will populate with the employee name entered from the intranet form</inlineHelpText>
    <label>Employee Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>