force-app/main/default/objects/Employee_Board_Membership__c/fields/Employee_Position__c.field-meta.xml
<CustomField>
    <fullName>Employee_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List the title or position of the employee at the bank. This should be the same title we see when looking up the employee in the company directory.</inlineHelpText>
    <label>Employee Position</label>
    <length>140</length>
    <type>Text</type>
</CustomField>