force-app/main/default/objects/Employee_Board_Membership__c/fields/Employee_Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Employee_Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the employee you wish to add is not available, add them as a Volunteer Org Contact instead and then use the general Board Membership.</inlineHelpText>
    <label>Employee (Salesforce User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Board_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>