force-app/main/default/objects/Employee_Board_Membership__c/fields/Estimated_Total_Service_Hours_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Service_Hours_This_Year__c</fullName>
    <label>Estimated Total Service Hours This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>