force-app/main/default/objects/Employee_Board_Membership__c/fields/HR_IT_Legal_Services__c.field-meta.xml
<CustomField>
    <fullName>HR_IT_Legal_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activity should align with FNBO job duties or area of expertise.  Example: HR Director assists with the development of employee handbook.</inlineHelpText>
    <label>Provided HR, IT, or Legal Services</label>
    <type>Checkbox</type>
</CustomField>