force-app/main/default/objects/Employee_Board_Membership__c/fields/Not_Listed__c.field-meta.xml
<CustomField>
    <fullName>Not_Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If service type is not listed, please provide details in the ‘Service Details’ text box.</inlineHelpText>
    <label>Not Listed ?</label>
    <type>Checkbox</type>
</CustomField>