force-app/main/default/objects/Employee_Board_Membership__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>IF ( ISBlank( Organization_Other__c), Volunteer_Organization__r.Name, Organization_Other__c  +&#39; (&#39; + Volunteer_Organization__r.Name + &#39;)&#39;)</formula>
    <label>Organization</label>
    <type>Text</type>
</CustomField>