force-app/main/default/objects/Employee_Board_Membership__c/fields/Organization_City_Review__c.field-meta.xml
<CustomField>
    <fullName>Organization_City_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization City Review</label>
    <length>40</length>
    <type>Text</type>
</CustomField>