force-app/main/default/objects/Employee_Board_Membership__c/fields/Organization_Other__c.field-meta.xml
<CustomField>
    <fullName>Organization_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization Other</label>
    <length>120</length>
    <type>Text</type>
</CustomField>