force-app/main/default/objects/Employee_Board_Membership__c/fields/Organization_State_Review__c.field-meta.xml
<CustomField>
    <fullName>Organization_State_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization State Review</label>
    <length>40</length>
    <type>Text</type>
</CustomField>