force-app/main/default/objects/Employee_Board_Membership__c/fields/Provides_Tech_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Provides_Tech_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activity should align with FNBO job duties or area of expertise.  Example: Chief Credit Officer assists with development of lending policy.</inlineHelpText>
    <label>Provides Technical Assistance</label>
    <type>Checkbox</type>
</CustomField>