force-app/main/default/objects/Employee_Board_Membership__c/fields/Provides_Workforce_Dev_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Provides_Workforce_Dev_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activity should align with FNBO job duties or area of expertise.  Example: Credit Analyst instructs entrepreneur workshop.</inlineHelpText>
    <label>Provides Workforce Dev Assistance</label>
    <type>Checkbox</type>
</CustomField>