force-app/main/default/objects/Employee_Board_Membership__c/fields/Served_on_Loan_Review_Committee__c.field-meta.xml
<CustomField>
    <fullName>Served_on_Loan_Review_Committee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activity should align with FNBO job duties or area of expertise.   Example: Underwriter assists with evaluating loan requests and makes lending recommendations.</inlineHelpText>
    <label>Served on Loan Review Committee</label>
    <type>Checkbox</type>
</CustomField>