force-app/main/default/objects/Employee_Board_Membership__c/fields/Serves_on_a_Sub_Committee_Emp__c.field-meta.xml
<CustomField>
    <fullName>Serves_on_a_Sub_Committee_Emp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please select Committee from list or provide details in the ‘Service Details’ text box.</inlineHelpText>
    <label>Serves on a Sub-Committee</label>
    <type>Checkbox</type>
</CustomField>