force-app/main/default/objects/Employee_Board_Membership__c/fields/Serves_on_Official_Board_of_Directors_Em__c.field-meta.xml
<CustomField>
    <fullName>Serves_on_Official_Board_of_Directors_Em__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Examples of Board of Director positions include: Chair, Vice-Chair, Treasurer, Secretary, or General Member.</inlineHelpText>
    <label>Served on Board of Directors</label>
    <type>Checkbox</type>
</CustomField>