force-app/main/default/objects/Employee_Board_Membership__c/fields/Service_Details__c.field-meta.xml
<CustomField>
    <fullName>Service_Details__c</fullName>
    <description>Details of Board Service</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please provide additional details about service with the organization.  This could include position on BOD, specific details around service performed, or how service aligns with area of expertise.</inlineHelpText>
    <label>Service Details</label>
    <type>TextArea</type>
</CustomField>