force-app/main/default/objects/Employee_Board_Membership__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SourceId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>