force-app/main/default/objects/Employee_Board_Membership__c/fields/Sub_Committee_Type_emp__c.field-meta.xml
<CustomField>
    <fullName>Sub_Committee_Type_emp__c</fullName>
    <inlineHelpText>Examples of Committees include: Executive, Audit, Governance, Finance, Membership, Program, Advisory, Development, Guild or Service, Capital Campaign, and Investment.</inlineHelpText>
    <label>Served on Committee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Capital Campaign</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Governance</fullName>
            </value>
            <value>
                <fullName>Guild or Service</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>