force-app/main/default/objects/Employee_Board_Membership__c/fields/Teaches_Financial_Education__c.field-meta.xml
<CustomField>
    <fullName>Teaches_Financial_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activity should align with FNBO job duties or area of expertise. Example: Branch Manager provides banking industry products and services training to the clients of an organization.</inlineHelpText>
    <label>Teaches Financial Education</label>
    <type>Checkbox</type>
</CustomField>