force-app/main/default/objects/Employee_Board_Membership__c/fields/Title_of_Board_Member_Employee__c.field-meta.xml
<CustomField>
    <fullName>Title_of_Board_Member_Employee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This should be the position or role you have on the Board and any Committees you may have served on. For example, &quot;Dir of Technology and Finance Committee Chair&quot;</inlineHelpText>
    <label>Position on the Board</label>
    <length>140</length>
    <type>Text</type>
</CustomField>