force-app/main/default/objects/Employee_Board_Membership__c/fields/Volunteer_Organization__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Organization</label>
    <referenceTo>Volunteer_Organization__c</referenceTo>
    <relationshipLabel>Employee Board Memberships</relationshipLabel>
    <relationshipName>Employee_Board_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>