force-app/main/default/objects/Employee_Board_Membership__c/fields/Volunteer_Organization_Intranet__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Organization_Intranet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field captures the Volunteer Org that employees list on the intranet</inlineHelpText>
    <label>Organization Review</label>
    <length>50</length>
    <type>Text</type>
</CustomField>